--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 main {
-  text-align: center;
-  vertical-align: center;
-  line-height: 100vh
+  /* text-align: center; */
+  /* vertical-align: center; */
+  /* line-height: 100vh; */
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.generations {
+  grid-column: 1;
+  grid-row: 2 / 4
+}
+
+.ingredients {
+  grid-column: 1;
+  grid-row: 1;
 }
